[gd_scene load_steps=2 format=2]

[ext_resource path="res://PlayerSelectMenu.gd" type="Script" id=1]

[node name="PlayerSelectMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.129412, 0.380392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 303.641
offset_top = 10.1766
offset_right = 445.641
offset_bottom = 98.1766
text = "Start!"

[node name="Button2" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 588.383
offset_top = 10.1766
offset_right = 730.383
offset_bottom = 98.1766
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.12
anchor_right = 0.851
anchor_bottom = 0.002
offset_left = 0.119995
offset_top = 1.0
offset_right = -0.424011
offset_bottom = 165.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
offset_left = 50.0
offset_top = 50.0
offset_right = 155.0
offset_bottom = 115.0
text = "Player 1:


 Human"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control"]
offset_left = 200.0
offset_top = 50.0
offset_right = 305.0
offset_bottom = 64.0
text = "Player 2:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Control"]
offset_left = 350.0
offset_top = 50.0
offset_right = 455.0
offset_bottom = 64.0
text = "Player 3:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Control"]
offset_left = 500.0
offset_top = 50.0
offset_right = 605.0
offset_bottom = 64.0
text = "Player 4:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Control"]
offset_left = 650.0
offset_top = 50.0
offset_right = 755.0
offset_bottom = 64.0
text = "Player 5:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="Control"]
offset_left = 200.0
offset_top = 100.0
offset_right = 272.0
offset_bottom = 120.0
text = "AI"
items = [ "AI", null, false, 0, null, "Human", null, false, 1, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton2" type="OptionButton" parent="Control"]
offset_left = 350.0
offset_top = 100.0
offset_right = 422.0
offset_bottom = 120.0
text = "None"
items = [ "None", null, false, 0, null, "AI", null, false, 1, null, "Human", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton3" type="OptionButton" parent="Control"]
offset_left = 500.0
offset_top = 100.0
offset_right = 572.0
offset_bottom = 120.0
text = "None"
items = [ "None", null, false, 0, null, "AI", null, false, 1, null, "Human", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton4" type="OptionButton" parent="Control"]
offset_left = 650.0
offset_top = 100.0
offset_right = 722.0
offset_bottom = 120.0
text = "None"
items = [ "None", null, false, 0, null, "AI", null, false, 1, null, "Human", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
